MAVENOPTS env block